--- a/text_whklive.html
+++ b/text_whklive.html
@@ -4,11 +4,24 @@
     <meta charset="UTF-8">
     <title>TEXT: Whakatane Live</title>
     <style type="text/css">
+    	@import url('https://fonts.googleapis.com/css?family=Fugaz+One');
+    	.text_container {
+            /*font-family: 'Arial Narrow Bold', sans-serif;*/
+            font-family: 'Fugaz One', cursive;
+            background-color: rgba(50, 50, 50, 0.8);
+            /*border: 1px solid white;*/
+            padding: 8px 18px 0px 8px;
+            line-height: 1;
+            display: inline-block;
+            -webkit-box-shadow: 0px 0px 12px 2px rgba(250,215,40,1);
+			-moz-box-shadow: 0px 0px 12px 2px rgba(250,215,40,1);
+			box-shadow: 0px 0px 12px 2px rgba(250,215,40,1);
+			-webkit-border-radius: 5px;
+			-moz-border-radius: 5px;
+			border-radius: 5px;
+    	}
         .text {
-            font-family: 'Arial Narrow Bold', sans-serif;
-            background-color: rgba(0, 0, 0, 0.8);
-            padding: 20px 20px 6px 20px;
-            color: #FFF;
+            color: #DDD;
             font-size: 84px;
             /* font-weight: bold; */
         }
