Logo: Big changed, removed text and added image logo with weather temperatures.

--- a/text_whklive.html
+++ b/text_whklive.html
@@ -1,35 +1,93 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="UTF-8">
-    <title>TEXT: Whakatane Live</title>
-    <style type="text/css">
-    	@import url('https://fonts.googleapis.com/css?family=Fugaz+One');
-    	.text_container {
-            /*font-family: 'Arial Narrow Bold', sans-serif;*/
-            font-family: 'Fugaz One', cursive;
-            background-color: rgba(50, 50, 50, 0.8);
-            /*border: 1px solid white;*/
-            padding: 8px 18px 0px 8px;
-            line-height: 1;
-            display: inline-block;
-            -webkit-box-shadow: 0px 0px 12px 2px rgba(250,215,40,1);
-			-moz-box-shadow: 0px 0px 12px 2px rgba(250,215,40,1);
-			box-shadow: 0px 0px 12px 2px rgba(250,215,40,1);
-			-webkit-border-radius: 5px;
-			-moz-border-radius: 5px;
-			border-radius: 5px;
-    	}
-        .text {
-            color: #DDD;
-            font-size: 84px;
-            /* font-weight: bold; */
-        }
-    </style>
-  </head>
-  <body>
-    <div class="text_container">
-        <span class="text">WHAKATANE LIVE</span>
+
+<head>
+  <meta charset="UTF-8">
+  <title>TEXT: Whakatane Live</title>
+  <style type="text/css">
+    @import url('https://fonts.googleapis.com/css?family=Fugaz+One');
+
+    .text_container {
+      /*font-family: 'Arial Narrow Bold', sans-serif;*/
+      font-family: 'Fugaz One', cursive;
+      background-color: rgba(50, 50, 50, 0.8);
+      /*border: 1px solid white;*/
+      padding: 8px 18px 0px 8px;
+      line-height: 1;
+      display: inline-block;
+      -webkit-box-shadow: 0px 0px 12px 2px rgba(250, 215, 40, 1);
+      -moz-box-shadow: 0px 0px 12px 2px rgba(250, 215, 40, 1);
+      box-shadow: 0px 0px 12px 2px rgba(250, 215, 40, 1);
+      -webkit-border-radius: 5px;
+      -moz-border-radius: 5px;
+      border-radius: 5px;
+    }
+
+    .text_container2 {
+      /*font-family: 'Arial Narrow Bold', sans-serif;*/
+      font-family: 'Fugaz One', cursive;
+      background-color: rgba(50, 50, 50, 0.8);
+      /*border: 1px solid white;*/
+      padding: 0;
+      -webkit-border-radius: 55px 5px 5px 55px;
+      -moz-border-radius: 55px 5px 5px 55px;
+      border-radius: 55px 5px 5px 55px;
+      position: relative;
+      height: 103px;
+      width: 220px;
+    }
+
+    .text {
+      color: #DDD;
+      font-size: 84px;
+    }
+
+    .text2 {
+      color: #DDD;
+      font-size: 32px;
+      margin: 0 0 0 120px;
+      line-height: 1;
+    }
+
+    .whklive_circle {
+      width: 160px;
+      height: auto;
+      position: absolute;
+      left: -30px;
+      top: -8px;
+    }
+
+    .weather {
+      padding: 16px 0 0 0;
+    }
+
+    .weather div {
+      padding: 0 0 10px 0;
+    }
+  </style>
+</head>
+
+<body>
+  <!-- <div class="text_container">
+    <span class="text">WHAKATANE LIVE</span>
+  </div>
+  <br>
+  <br>
+  <br>
+  <div class="text_container">
+    <span class="text">WHKLIVE.CO.NZ</span>
+  </div>
+  </div>
+  <br>
+  <br>
+  <br> -->
+  <div class="text_container2">
+    <img class="whklive_circle" src="whklive_circle.png" />
+    <div class="weather">
+        <div class="text2">H 24°</div>
+        <div class="text2">L 18°</div>
     </div>
-  </body>
+  </div>
+</body>
+
 </html>
