--- a/text_whklive.html
+++ b/text_whklive.html
@@ -7,45 +7,21 @@
   <style type="text/css">
     @import url('https://fonts.googleapis.com/css?family=Fugaz+One');
 
-    .text_container {
-      /*font-family: 'Arial Narrow Bold', sans-serif;*/
+    .logo_container {
       font-family: 'Fugaz One', cursive;
       background-color: rgba(50, 50, 50, 0.8);
-      /*border: 1px solid white;*/
-      padding: 8px 18px 0px 8px;
-      line-height: 1;
-      display: inline-block;
-      -webkit-box-shadow: 0px 0px 12px 2px rgba(250, 215, 40, 1);
-      -moz-box-shadow: 0px 0px 12px 2px rgba(250, 215, 40, 1);
-      box-shadow: 0px 0px 12px 2px rgba(250, 215, 40, 1);
-      -webkit-border-radius: 5px;
-      -moz-border-radius: 5px;
-      border-radius: 5px;
-    }
-
-    .text_container2 {
-      /*font-family: 'Arial Narrow Bold', sans-serif;*/
-      font-family: 'Fugaz One', cursive;
-      background-color: rgba(50, 50, 50, 0.8);
-      /*border: 1px solid white;*/
-      padding: 0;
+      padding: 0 0 0 120px;
       -webkit-border-radius: 55px 5px 5px 55px;
       -moz-border-radius: 55px 5px 5px 55px;
       border-radius: 55px 5px 5px 55px;
       position: relative;
       height: 103px;
-      width: 220px;
+      width: 120px;
     }
 
     .text {
       color: #DDD;
-      font-size: 84px;
-    }
-
-    .text2 {
-      color: #DDD;
       font-size: 32px;
-      margin: 0 0 0 120px;
       line-height: 1;
     }
 
@@ -57,37 +33,44 @@
       top: -8px;
     }
 
-    .weather {
+    .weather, .date {
       padding: 16px 0 0 0;
+      display: inline-block;
+      margin: 0 0 0 12px;
     }
 
-    .weather div {
+    .weather div, .date div {
       padding: 0 0 10px 0;
+    }
+
+    .date {
+      margin: 0 0 0 120px;
     }
   </style>
 </head>
 
 <body>
-  <!-- <div class="text_container">
-    <span class="text">WHAKATANE LIVE</span>
-  </div>
-  <br>
-  <br>
-  <br>
-  <div class="text_container">
-    <span class="text">WHKLIVE.CO.NZ</span>
-  </div>
-  </div>
-  <br>
-  <br>
-  <br> -->
-  <div class="text_container2">
+
+  <div class="logo_container">
     <img class="whklive_circle" src="whklive_circle.png" />
+    <!-- <div class="date">
+        <div class="text">NOW 19°</div>
+        <div class="text">24 JAN</div>
+    </div> -->
     <div class="weather">
-        <div class="text2">H 24°</div>
-        <div class="text2">L 18°</div>
+        <div class="text" id="temp_max">N/A</div>
+        <div class="text" id="temp_min">N/A</div>
     </div>
   </div>
+
+  <!-- jQuery -->
+  <script src="https://code.jquery.com/jquery-3.3.1.min.js"
+  integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+  crossorigin="anonymous"></script>
+
+  <!-- Custom scripts for this template -->
+  <script src="javascript.js"></script>
+
 </body>
 
 </html>
