Temperature: Reduced right margin so temps fit better in box.

--- a/text_whklive.html
+++ b/text_whklive.html
@@ -58,7 +58,8 @@
     }
 
     .weather div {
-      display: inline-block
+      display: inline-block;
+      margin-right: -4px;
     }
 
     .weather div, .time div {
